--- a/env-files/example-single-sport.env
+++ b/env-files/example-single-sport.env
@@ -1,3 +1,4 @@
+ASVZ_DEBUG=false                                 # Can be omitted if flase (needs display output to wotk)
 # You can also provide only a single lesson id. Note that it will be unique for each repetition of a single sport
 ASVZ_ENROLLMENT_TYPE=training
 ASVZ_LESSON_ID=123456
