--- a/env-files/example-sport.env
+++ b/env-files/example-sport.env
@@ -1,4 +1,4 @@
-headless=true                               # always leave true if using docker
+ASVZ_DEBUG=false                            # Can be omitted if flase (needs display output to wotk)
 ASVZ_ENROLLMENT_TYPE=training               # { training / lesson / event }
 ASVZ_RECURRING_EVENT=false                  # Set to true to reenroll weekly
 
